--- a/package.json
+++ b/package.json
@@ -79,8 +79,9 @@
     "val-loader": "^1.0.2",
     "vm-browserify": "~1.1.0",
     "wast-loader": "^1.5.5",
-    "webpack-dev-middleware": "^3.5.1",
     "webassembly-feature": "1.3.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.5.1",
     "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.1"
   },
